--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,11 @@
     <style name="Base.Theme.EF_Ecommerce" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">#F8702C</item>
+    </style>
+
+    <style name="RoundedFAB">
+        <item name="cornerSize">50%</item>
     </style>
 
     <style name="Theme.EF_Ecommerce" parent="Base.Theme.EF_Ecommerce" />
