--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/login_bg"
     android:layout_height="match_parent"
+    android:background="@drawable/login_bg"
     tools:context=".LoginActivity">
-
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -49,7 +47,6 @@
 
             </LinearLayout>
 
-
             <LinearLayout
                 android:id="@+id/linearLayout11"
                 android:layout_width="140dp"
@@ -84,11 +81,11 @@
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:background="@drawable/dialogbg"
+        android:orientation="horizontal"
         app:cardElevation="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -175,17 +172,16 @@
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.343"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-                app:layout_constraintVertical_bias="0.344" />
+                app:layout_constraintVertical_bias="0.192" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_margin="20dp"
                 android:layout_height="50dp"
-                android:orientation="horizontal"
+                android:layout_margin="20dp"
                 android:gravity="center"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -194,15 +190,15 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    app:cardCornerRadius="20dp"
                     android:layout_gravity="center"
-                    android:backgroundTint="#1877F2">
+                    android:backgroundTint="#1877F2"
+                    app:cardCornerRadius="20dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:background="@drawable/ic_facebook">
+                        android:background="@drawable/ic_facebook"
+                        android:gravity="center">
 
                     </ImageView>
 
@@ -211,16 +207,16 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    app:cardCornerRadius="20dp"
-                    android:layout_marginStart="15dp"
                     android:layout_gravity="center"
-                    android:backgroundTint="@color/white">
+                    android:layout_marginStart="15dp"
+                    android:backgroundTint="@color/white"
+                    app:cardCornerRadius="20dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:background="@drawable/ic_goggle">
+                        android:background="@drawable/ic_goggle"
+                        android:gravity="center">
 
                     </ImageView>
 
@@ -229,11 +225,11 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    app:cardCornerRadius="20dp"
-                    android:layout_marginStart="15dp"
                     android:layout_gravity="center"
+                    android:layout_marginStart="15dp"
+                    android:background="@color/white"
                     android:padding="10dp"
-                    >
+                    app:cardCornerRadius="20dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -249,15 +245,11 @@
 
                     </LinearLayout>
 
-
-
                 </androidx.cardview.widget.CardView>
-
 
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </LinearLayout>
 
