--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -8,13 +8,9 @@
 
     <item
         android:id="@+id/bottom_menu"
-        android:icon="@drawable/ic_pizza"
+        android:icon="@drawable/ic_cake"
         android:title="@string/menu"/>
 
-    <item
-        android:id="@+id/bottom_fab"
-        android:title=""
-        android:enabled="false"/>
 
     <item
         android:id="@+id/bottom_favorite"
