--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,20 +43,25 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/bottomAppBar"
                     android:layout_gravity="bottom"
-                    android:backgroundTint="@color/orange"
+                    android:backgroundTint="@color/white"
                     app:fabCradleMargin="10dp"
                     app:fabCradleRoundedCornerRadius="50dp">
 
                     <com.google.android.material.bottomnavigation.BottomNavigationView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="@color/white"
                         android:id="@+id/bottom_navigation"
                         android:layout_marginEnd="20dp"
-                        app:labelVisibilityMode="labeled"
-                        app:itemIconTint="@color/white"
                         app:itemTextColor="@color/white"
                         app:menu="@menu/bottom_menu"
-                        android:background="@android:color/transparent"/>
+                        app:labelVisibilityMode="unlabeled"
+                        android:elevation="2dp"
+                        app:itemIconSize="27dp"
+                        app:itemIconTint="@drawable/item_selector"
+                        app:itemRippleColor="@android:color/transparent">
+
+                    </com.google.android.material.bottomnavigation.BottomNavigationView>
                 </com.google.android.material.bottomappbar.BottomAppBar>
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -66,7 +71,7 @@
                     app:layout_anchor="@id/bottomAppBar"
                     android:backgroundTint="@color/orange"
                     android:src="@drawable/ic_add"
-                    app:maxImageSize="40dp"
+                    app:maxImageSize="30dp"
                     app:tint ="@color/white"
                     app:shapeAppearanceOverlay="@style/RoundedFAB"/>
 
