--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -165,7 +165,7 @@
                 android:layout_height="59dp"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="16dp"
-                android:backgroundTint="@color/orange"
+                android:backgroundTint="#97B17B6E"
                 android:text="@string/name_login"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
@@ -187,8 +187,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/btnLogin">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:backgroundTint="#1877F2"
                     app:cardCornerRadius="20dp">
@@ -204,30 +204,11 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:layout_marginStart="15dp"
                     android:backgroundTint="@color/white"
-                    app:cardCornerRadius="20dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/ic_goggle"
-                        android:gravity="center">
-
-                    </ImageView>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="15dp"
-                    android:background="@color/white"
-                    android:padding="10dp"
                     app:cardCornerRadius="20dp">
 
                     <LinearLayout
@@ -236,8 +217,33 @@
                         android:gravity="center">
 
                         <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="22dp"
+                            android:layout_height="22dp"
+                            android:gravity="center"
+                            android:src="@drawable/ic_goggle">
+                        </ImageView>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="15dp"
+                    android:background="@color/white"
+                    app:cardCornerRadius="20dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="5dp"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:layout_width="23dp"
+                            android:layout_height="23dp"
                             android:gravity="center"
                             android:src="@drawable/ic_twitter">
                         </ImageView>
