--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         <FrameLayout
             android:id="@+id/fcv_main"
             android:layout_width="match_parent"
-            android:layout_height="690dp" />
+            android:layout_height="match_parent" />
 
         <FrameLayout
             android:layout_width="match_parent"
