--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -7,10 +7,12 @@
     tools:context=".Fragments.DetailFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -21,16 +23,17 @@
             android:contentDescription="@null"
             android:orientation="vertical"
             android:scaleType="centerCrop"
-            tools:ignore="MissingConstraints"></ImageView>
-
+            tools:ignore="MissingConstraints" />
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
         <androidx.cardview.widget.CardView
@@ -50,34 +53,36 @@
                 android:src="@drawable/ic_back"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="250dp"
-            app:cardCornerRadius="10dp">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
-            <ImageButton
-                android:id="@+id/btnFavorito"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:backgroundTint="@color/white"
-                android:contentDescription="@null"
-                android:src="@drawable/ic_favorite"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="22dp"
+                app:cardCornerRadius="10dp">
 
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
+                <ImageButton
+                    android:id="@+id/btnFavorito"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:backgroundTint="@color/white"
+                    android:contentDescription="@null"
+                    android:src="@drawable/ic_favorite"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
     <LinearLayout
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="550dp"
+        android:layout_height="530dp"
         android:background="@drawable/dialogbg"
         android:orientation="horizontal"
         app:cardElevation="20dp"
@@ -94,7 +99,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
 
@@ -110,7 +116,6 @@
                     android:text="Nombre del Producto"
                     android:textSize="30sp"
                     android:textStyle="bold" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -118,10 +123,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                app:layout_constraintVertical_bias="0.0"
-                tools:layout_editor_absoluteX="0dp">
+                app:layout_constraintVertical_bias="0.0">
 
                 <TextView
                     android:id="@+id/textViewProductDescription"
@@ -133,7 +138,6 @@
                     android:text="Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500."
                     android:textColor="#7E000000"
                     android:textSize="15sp" />
-
             </LinearLayout>
 
             <LinearLayout
@@ -141,10 +145,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-                app:layout_constraintVertical_bias="0.032"
-                tools:layout_editor_absoluteX="0dp">
+                app:layout_constraintVertical_bias="0.032">
 
                 <TextView
                     android:id="@+id/textViewProductPrice"
@@ -159,44 +163,30 @@
                     android:textColor="@color/orange"
                     android:textSize="24sp"
                     android:textStyle="bold" />
-
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/linearLayoutSize"
+            <TextView
+                android:id="@+id/textViewProductSize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-                app:layout_constraintVertical_bias="0.032"
-                tools:layout_editor_absoluteX="0dp">
-
-                <TextView
-                    android:id="@+id/textViewProductSize"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/textViewProductName"
-                    android:layout_marginStart="22dp"
-                    android:layout_marginTop="80dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:text="Size"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
+                android:paddingHorizontal="25dp"
+                android:text="Size"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
             <LinearLayout
                 android:id="@+id/linearLayout4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="22dp"
+                android:layout_height="58dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/detail_background"
                 android:elevation="2dp"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@+id/linearButton"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewProductSize">
 
                 <TextView
                     android:id="@+id/txtCodigo"
@@ -206,6 +196,7 @@
                     android:background="@null"
                     android:gravity="center"
                     android:hint="Choose size"
+                    android:padding="10dp"
                     android:paddingEnd="260dp"
                     android:singleLine="true"
                     android:textColor="@color/black"
@@ -217,45 +208,42 @@
                     android:background="@drawable/ic_detail_background"
                     android:src="@drawable/ic_arrow_down"
                     app:tint="#000000" />
-
             </LinearLayout>
-
-<!--            <Spinner-->
-<!--                android:id="@+id/spinner"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="60dp"-->
-<!--                android:layout_gravity="center_horizontal"-->
-<!--                android:layout_marginBottom="32dp"-->
-<!--                android:layout_margin="22dp"-->
-<!--                android:background="@android:drawable/btn_dropdown"-->
-<!--                app:layout_constraintBottom_toTopOf="@+id/linearButton"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintHorizontal_bias="0.354"-->
-<!--                app:layout_constraintStart_toStartOf="parent" />-->
-
+            <!-- <Spinner-->
+            <!-- android:id="@+id/spinner"-->
+            <!-- android:layout_width="match_parent"-->
+            <!-- android:layout_height="60dp"-->
+            <!-- android:layout_gravity="center_horizontal"-->
+            <!-- android:layout_marginBottom="32dp"-->
+            <!-- android:layout_margin="22dp"-->
+            <!-- android:background="@android:drawable/btn_dropdown"-->
+            <!-- app:layout_constraintBottom_toTopOf="@+id/linearButton"-->
+            <!-- app:layout_constraintEnd_toEndOf="parent"-->
+            <!-- app:layout_constraintHorizontal_bias="0.354"-->
+            <!-- app:layout_constraintStart_toStartOf="parent" />-->
             <androidx.cardview.widget.CardView
+                android:id="@+id/cardView3"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="22dp"
                 android:background="#0C000000"
                 android:orientation="horizontal"
                 app:cardCornerRadius="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
                 <LinearLayout
                     android:id="@+id/linearCantidad"
-                    android:layout_width="100dp"
-                    android:layout_height="60dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/btnCantidad"
                         android:layout_width="40dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="40dp"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginStart="13dp"
+                        android:layout_margin="10dp"
                         android:backgroundTint="#EBEBEB"
                         android:gravity="center"
                         android:text="1"
@@ -265,15 +253,16 @@
                     <LinearLayout
                         android:layout_width="39dp"
                         android:layout_height="60dp"
-                        android:layout_gravity="center"
-                        android:orientation="vertical">
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="10dp">
 
                         <ImageButton
                             android:id="@+id/btn_up"
                             android:layout_width="30dp"
-                            android:layout_height="15dp"
-                            android:layout_marginTop="13dp"
+                            android:layout_height="0dp"
                             android:layout_centerHorizontal="true"
+                            android:layout_weight="1"
                             android:backgroundTint="@android:color/transparent"
                             android:src="@drawable/ic_arrow_up"
                             android:textColor="#161616"
@@ -282,32 +271,25 @@
                         <ImageButton
                             android:id="@+id/btn_down"
                             android:layout_width="30dp"
-                            android:layout_height="15dp"
+                            android:layout_height="0dp"
                             android:layout_centerHorizontal="true"
+                            android:layout_weight="1"
                             android:backgroundTint="@android:color/transparent"
                             android:src="@drawable/ic_arrow_down"
                             android:textColor="#161616"
                             android:textSize="20sp" />
-
                     </LinearLayout>
-
                 </LinearLayout>
-
             </androidx.cardview.widget.CardView>
-
-
 
             <LinearLayout
                 android:id="@+id/linearButton"
-                android:layout_width="230dp"
+                android:layout_width="250dp"
                 android:layout_height="60dp"
-                android:layout_margin="22dp"
-                android:layout_marginEnd="22dp"
-                android:gravity="center"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+                app:layout_constraintStart_toEndOf="@+id/cardView3"
+                app:layout_constraintTop_toTopOf="@+id/cardView3">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -325,16 +307,11 @@
                         android:text="Add to chart"
                         android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:textStyle="bold"/>
-
+                        android:textStyle="bold" />
                 </androidx.cardview.widget.CardView>
 
-
             </LinearLayout>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
