--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -102,16 +102,13 @@
                     android:orientation="horizontal"
                     android:scrollbars="horizontal" />
 
-
             </LinearLayout>
-
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -131,8 +128,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-
-
+                android:layout_marginBottom="95dp"
                 android:padding="10dp">
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -146,7 +142,6 @@
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
                     android:scrollbars="vertical"
-
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:spanCount="2" />
 
