--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,6 +85,7 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="65dp"
+                    android:singleLine="true"
                     android:drawableRight="@drawable/ic_email"
                     android:hint="Código" />
 
@@ -104,6 +105,7 @@
                     android:layout_height="65dp"
                     android:drawableRight="@android:drawable/ic_secure"
                     android:hint="Contraseña"
+                    android:singleLine="true"
                     android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
