--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -78,7 +78,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="Precio Producto"
+                            android:text="S/. 12.00"
                             android:textColor="@color/orange"
                             android:textStyle="bold" />
                     </LinearLayout>
