--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:text="Bread"
+            android:textStyle="bold"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
